# doodoori

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PLANNING.md  README.md  doodoori.md  price.toml
.github/workflows/: gitleaks.yml
docker/: Dockerfile.sandbox  docker-compose.yml
examples/: workflow.yaml
scripts/: install-hooks.sh  pre-commit
specs/cleanup/: dead-code-cleanup.md
specs/dashboard/: IMPLEMENTATION_SUMMARY.md  enhanced-dashboard.md
specs/templates/: 01-template-core.md  02-template-cli.md  03-builtin-templates.md  04-run-integration.md  04-template-cli-impl.md  workflow.yaml
src/: lib.rs  main.rs
src/claude/: mod.rs  models.rs  runner.rs
src/cli/: mod.rs
src/cli/commands/: cost.rs  dashboard.rs  git.rs  mod.rs  parallel.rs  resume.rs  run.rs  sandbox.rs  secret.rs  spec.rs  template.rs  watch.rs  workflow.rs
src/config/: mod.rs
src/executor/: mod.rs
src/git/: branch.rs  commit.rs  mod.rs  pr.rs  repo.rs  worktree.rs
src/hooks/: mod.rs
src/instructions/: mod.rs  parser.rs  spec.rs  validation.rs
src/loop_engine/: event_bus.rs  mod.rs
src/notifications/: mod.rs
src/output/: mod.rs
src/pricing/: history.rs  mod.rs
src/sandbox/: config.rs  container.rs  mod.rs  runner.rs
src/secrets/: env_loader.rs  keychain.rs  masking.rs  mod.rs
src/state/: mod.rs
src/templates/: builtin.rs  mod.rs  storage.rs
src/templates/builtin/: add-docs.yaml  add-tests.yaml  api-endpoint.yaml  clean-imports.yaml  cli-command.yaml  extract-function.yaml  fix-bug.yaml  integration-test.yaml  react-component.yaml
src/utils/: mod.rs
src/watch/: mod.rs
src/workflow/: mod.rs
