[package]
name = "doodoori"
version = "0.1.0"
edition = "2024"
description = "Autonomous CLI tool that uses Claude Code internally to complete goals without user intervention"
authors = ["devlikebear <devlikebear@gmail.com>"]
license = "MIT"
repository = "https://github.com/devlikebear/doodoori"
keywords = ["claude", "ai", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "signal", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
directories = "5.0"
dotenvy = "0.15"

# HTTP (for price updates)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Docker (optional, for sandbox mode)
bollard = { version = "0.18", optional = true }

# TUI (optional, for dashboard)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

# Progress indicators
indicatif = "0.17"
console = "0.15"

# Markdown parsing
pulldown-cmark = "0.12"

# Keychain (optional)
keyring = { version = "3.6", optional = true }

[features]
default = []
sandbox = ["bollard"]
dashboard = ["ratatui", "crossterm"]
keychain = ["dep:keyring"]
price-update = ["reqwest"]
full = ["sandbox", "dashboard", "keychain", "price-update"]

[[bin]]
name = "doodoori"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
