[package]
name = "doodoori"
version = "0.14.0"
edition = "2024"
description = "Autonomous CLI tool that uses Claude Code internally to complete goals without user intervention"
authors = ["devlikebear <devlikebear@gmail.com>"]
license = "MIT"
repository = "https://github.com/devlikebear/doodoori"
keywords = ["claude", "ai", "automation", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "signal", "sync", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1.11"

# Git operations
git2 = "0.19"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
directories = "5.0"
dotenvy = "0.15"
glob = "0.3"

# Async traits
async-trait = "0.1"

# HTTP (for notifications and price updates)
reqwest = { version = "0.12", features = ["json"] }

# Docker (optional, for sandbox mode)
bollard = { version = "0.18", optional = true }
futures-util = { version = "0.3", optional = true }

# TUI (optional, for dashboard)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }

# Progress indicators
indicatif = "0.18"
console = "0.15"

# Markdown parsing
pulldown-cmark = "0.12"

# File watching
notify = "7.0"
notify-debouncer-mini = "0.5"

# Keychain (optional)
keyring = { version = "3.6", optional = true }

# Unix process control (for detached mode)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
sandbox = ["bollard", "futures-util"]
dashboard = ["ratatui", "crossterm"]
keychain = ["dep:keyring"]
price-update = []
full = ["sandbox", "dashboard", "keychain"]

[lib]
name = "doodoori"
path = "src/lib.rs"

[[bin]]
name = "doodoori"
path = "src/main.rs"

[[bin]]
name = "doo"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
